# shanel-core

./: .gitignore  build.sh  pyproject.toml  setup.py
clustering/: kmeans.py
clustering/secure/: dbskmeans.py  dbsnnc.py  hola.txt  skmeans.py  test_nnc.py
clustering/secure/local/: dbsnnc.py  skmeans.py
interfaces/: cipherscheme_result.py  clustering_result.py  clusteringmanagerrequest.py  clusteringrequest copy.py  clusteringrequest.py  createsecureclusteringworker.py  dataowner_result.py  metricsResult_internal.py  secureclusteringmanager.py  secureclusteringworker.py  securereplicator.py  worker.py
logger/: Dumblogger.py  Logger.py
security/: dataowner.py
security/cryptosystem/: FDHOpe.py  FDHOpe_deprecated.py  dataOwnerDBS.py  dataOwnerv2.py  dataowner.py  liu.py  test.py  tpdmv2.py
src/rory.egg-info/: PKG-INFO  SOURCES.txt
src/rory/core/clustering/secure/distributed/: dbskmeans.py  skmeans.py
src/rory/core/interfaces/: clustering_result.py  dataowner_response.py  metricsResult_external.py
src/rory/core/logger/: Logger.py
src/rory/core/validationindex/: metrics.py  validationindex.py
src/rory/rory.egg-info/: PKG-INFO  SOURCES.txt
src/rory/scs.egg-info/: PKG-INFO  SOURCES.txt
src/rory/scs_core.egg-info/: PKG-INFO  SOURCES.txt
src/rory/scscore.egg-info/: PKG-INFO  SOURCES.txt
storage/: client.py  dumbStorage.py
storage/doa/: parameters.py
test/: testing.py
utils/: Utils.py  constants.py
validationindex/: helpers.py
